# LedgerLens

./: .dockerignore  .env.example  .gitignore  README.md  railway.toml
.github/: dependabot.yml
backend/: Dockerfile  Procfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 02a42e24f8cd_audit_event_actor_business_request_id.py  15d9df38c0b3_baseline_schema.py  527984084a01_category_mapping_editable_source_notes.py  5d5603a94bf4_business_id_on_core_workflow_tables.py  a1b2c3d4e5f6_transaction_split_lines.py  cc70b95bb129_csv_import_profiles.py
backend/scripts/: bootstrap_or_migrate.py  start.sh
backend/src/ledgerlens/: actor.py  config.py  errors.py  main.py  observability.py  seed.py  tenant_context.py
backend/src/ledgerlens/api/: admin.py  audit.py  audit_events.py  categories.py  categorize.py  corrections.py  demo.py  handoff.py  health.py  import_profiles.py  ledger.py  mapping.py  review.py  rules.py  schemas.py  session.py  splits.py  transactions.py
backend/src/ledgerlens/categorizers/: __init__.py  base.py  claude_haiku.py  demo_stub.py  hybrid.py  prompts.py  rules.py  stub.py
backend/src/ledgerlens/data/: __init__.py  business_rule_maps.py  category_rules.json  sample_scenario.py
backend/src/ledgerlens/db/: __init__.py  session.py
backend/src/ledgerlens/evals/: compare.py  harness.py  loader.py  metrics.py  report.py  run.py  schemas.py  writer.py
backend/src/ledgerlens/models/: __init__.py  account_category.py  audit_event.py  business.py  categorization_result.py  category_mapping_profile.py  correction_memory.py  csv_import_profile.py  membership.py  review_decision.py  tenant.py  transaction.py  transaction_split.py  user.py
backend/src/ledgerlens/repositories/: __init__.py  audit.py  categories.py  categorization.py  correction_memory.py  review.py  transactions.py
backend/src/ledgerlens/services/: audit_log.py  categorize.py  category_mapping.py  correction_memory.py  csv_import_profiles.py  data_retention.py  handoff.py  mapping_preview.py  normalize.py  rule_categorizer.py  sensitive_data.py  transaction_splits.py  vendor_normalization.py
backend/tests/: conftest.py  test_alembic_baseline.py  test_correction_memory_fingerprint.py  test_cors_settings_parsing.py  test_data_retention.py  test_health.py  test_multi_business_rule_mapping.py  test_parts_vendor_rule_batch.py  test_rule_mapping.py  test_sensitive_data.py  test_smoke.py  test_start_scripts.py  test_transaction_splits.py  test_vendor_normalization.py
backend/tests/api/: conftest.py  test_auth_tenant_foundation.py  test_categorize.py  test_correction_memory.py  test_csv_import_profiles.py  test_demo.py  test_demo_health.py  test_demo_stub_mode.py  test_handoff.py  test_handoff_exports.py  test_health.py  test_ledger_trust.py  test_mapping_apply.py  test_mapping_preview.py  test_observability.py  test_owner_answers.py  test_parts_vendor_production_path.py  test_persistent_category_mapping.py  test_review_and_ledger.py  test_rule_categorizer.py  test_rules_mapping.py  test_session_and_audit.py  test_tenant_boundary.py  test_transactions.py
backend/tests/categorizers/: test_claude_haiku_prompt.py  test_claude_haiku_response_handling.py  test_hybrid.py  test_rule_only_categorizer.py
backend/tests/evals/: test_compare.py  test_harness_end_to_end.py  test_loader.py  test_mapped_rule_eval.py  test_metrics.py  test_metrics_upgrade.py  test_safety_and_coverage_metrics.py
design/: README.md  tokens.css
docs/: ACCOUNTANT_CSV_EXPORTS.md  ACCOUNTING_DOMAIN_BOUNDARY.md  ACCOUNTING_LANGUAGE_AUDIT.md  ACCOUNTING_SYSTEM_EXPORT_READINESS.md  ARCHITECTURE.md  AUDIT_EVENT_MODEL.md  AUTH_TENANT_FOUNDATION.md  AUTH_TENANT_PHASE_1.md  AUTH_TENANT_PHASE_1_AUDIT.md  AUTH_TENANT_PHASE_1_REVIEW.md  AUTH_TENANT_PHASE_2_AUDIT.md  AUTH_TENANT_PHASE_2_REVIEW.md  BACKUP_RESTORE_AND_RETENTION_RUNBOOK.md  CATEGORY_MAPPING_WIZARD.md  CONVERSION_AND_STORY_OVERHAUL_PLAN.md  CORRECTION_MEMORY_GENERALIZATION_AUDIT.md  CORRECTION_MEMORY_PLAN.md  CSV_IMPORT_MAPPING_WIZARD.md  CSV_IMPORT_MAPPING_WIZARD_REVIEW.md  CSV_IMPORT_WIZARD_AUDIT.md  DEMO_SESSION_AND_BUSINESS_CONTEXT.md  DEMO_WALKTHROUGH.md  DEPENDENCY_UPDATE_POLICY.md  DEPLOYMENT_SMOKE_TEST.md  EVAL_DRIVEN_CATEGORIZATION_IMPROVEMENT.md  EVAL_HARNESS_UPGRADE_PLAN.md  (+78 more)
evals/: README.md
(+135 files in other folders)
