[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerlens"
version = "0.2.0"
description = "AI-assisted transaction categorization for bookkeepers."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Michael Palmer" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "anthropic",
    "python-dotenv",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ledgerlens.data" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends/File/Body must be called in argument defaults; B008
# flags this generically but it's the framework's standard pattern.
"src/ledgerlens/api/*.py" = ["B008"]
"src/ledgerlens/actor.py" = ["B008"]
# SessionLocal is the canonical sessionmaker variable name in SQLAlchemy docs.
"tests/api/conftest.py" = ["N806"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
