[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerlens"
version = "0.2.0"
description = "AI-assisted transaction categorization for bookkeepers."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Michael Palmer" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "anthropic",
    "python-dotenv",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ledgerlens.data" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends/File/Body must be called in argument defaults; B008
# flags this generically but it's the framework's standard pattern.
"src/ledgerlens/api/*.py" = ["B008"]
"src/ledgerlens/actor.py" = ["B008"]
# SessionLocal is the canonical sessionmaker variable name in SQLAlchemy docs.
"tests/api/conftest.py" = ["N806"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# SQLAlchemy Session.get/query/scalars/all return Any without the mypy
# plugin; Pydantic BaseModel and FastAPI decorators produce unresolved
# types without their plugins. These are framework-inherent patterns,
# not code defects. Suppressing project-wide avoids 100+ false positives.
disable_error_code = ["no-any-return", "misc", "untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
